<package format="3">
  <name>octomap_rviz_plugins</name>
  <version>2.2.0</version>
  <description>
     A set of plugins for displaying occupancy information decoded from binary octomap messages.
  </description>

  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>

  <url type="website">http://ros.org/wiki/octomap_rviz_plugins</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_rviz_plugins/issues</url>

  <license>BSD</license>

  <author email="jkammerl@willowgarage.com">Julius Kammerl</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend condition="$ROS_DISTRO != rolling">libqt5-core</depend>
  <depend condition="$ROS_DISTRO == rolling">libqt6-core</depend>
  <depend condition="$ROS_DISTRO != rolling">libqt5-gui</depend>
  <depend condition="$ROS_DISTRO == rolling">libqt6gui6t64</depend>
  <depend condition="$ROS_DISTRO != rolling">libqt5-widgets</depend>
  <depend condition="$ROS_DISTRO == rolling">libqt6widgets6t64</depend>
  <depend>octomap_msgs</depend>
  <depend>liboctomap-dev</depend>
  <depend condition="$ROS_DISTRO != rolling">qtbase5-dev</depend>
  <depend condition="$ROS_DISTRO == rolling">qt6-base-dev</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_rendering</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
